--- a/src/alert.html
+++ b/src/alert.html
@@ -1,10 +1,10 @@
 <div class="modal-header">
-	<button type="button" class="close" aria-hidden="true" ng-click="vm.cancel()">×</button>
+	<button type="button" class="close" aria-hidden="true" ng-click="vm.close()">×</button>
 	<h4 class="modal-title">{{vm.title}}</h4>
 </div>
 <div class="modal-body">
 	<p>{{vm.body}}</p>
 </div>
 <div class="modal-footer">
-	<button type="button" class="btn btn-default" ng-click="vm.cancel()">Close</button>
+	<button type="button" class="btn btn-default" ng-click="vm.close()">Close</button>
 </div>
