--- a/src/alert.html
+++ b/src/alert.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-	<button type="button" class="close" aria-hidden="true" ng-click="vm.close()">×</button>
+	<button type="button" class="close" aria-hidden="true" ng-click="vm.close()">&times;</button>
 	<h4 class="modal-title">{{vm.title}}</h4>
 </div>
 <div class="modal-body">
