--- a/src/confirm.html
+++ b/src/confirm.html
@@ -1,8 +1,11 @@
-<div class="modal-header dialog-header-confirm">
-	<button type="button" class="close" ng-click="no()">&times;</button>
-	<h4 class="modal-title"><span class="glyphicon glyphicon-check"></span> startSym header endSym </h4></div>
-<div class="modal-body" ng-bind-html="msg"></div>
+<div class="modal-header">
+	<button type="button" class="close" aria-hidden="true" ng-click="vm.cancel()">&times;</button>
+	<h4 class="modal-title">{{vm.title}}</h4>
+</div>
+<div class="modal-body">
+	<p>{{vm.body}}</p>
+</div>
 <div class="modal-footer">
-	<button type="button" class="btn btn-default" ng-click="yes()"> startSym defaultStrings.yes endSym</button>
-	<button type="button" class="btn btn-primary" ng-click="no()"> startSym defaultStrings.no endSym</button>
+	<button type="button" class="btn btn-default" ng-click="vm.cancel()">Cancel</button>
+	<button type="button" class="btn btn-primary" ng-click="vm.confirm()">Confirm</button>
 </div>
