[FEATURE] Error dialog

--- a/src/confirm.html
+++ b/src/confirm.html
@@ -6,6 +6,6 @@
 	<p>{{vm.body}}</p>
 </div>
 <div class="modal-footer">
-	<button type="button" class="btn btn-default" ng-click="vm.cancel()">Cancel</button>
-	<button type="button" class="btn btn-primary" ng-click="vm.confirm()">Confirm</button>
+	<button type="button" class="btn btn-default" ng-click="vm.confirm()">Confirm</button>
+	<button type="button" class="btn btn-primary" ng-click="vm.cancel()">Cancel</button>
 </div>
