--- a/src/error.html
+++ b/src/error.html
@@ -4,7 +4,7 @@
 </div>
 <div class="modal-body">
 	<p>{{vm.body}}</p>
-	<pre>{{vm.error}}</pre>
+	<pre>{{vm.error.message}}</pre>
 </div>
 <div class="modal-footer">
 	<button type="button" class="btn btn-default" ng-click="vm.close()">Close</button>
