--- a/src/wait.html
+++ b/src/wait.html
@@ -1,11 +1,13 @@
 <div class="modal-header">
+	<button type="button" class="close" aria-hidden="true" ng-click="vm.close()" ng-show="vm.options.finished && !vm.options.autoClose">&times;</button>
 	<h4 class="modal-title">{{vm.title}}</h4>
 </div>
 <div class="modal-body">
 	<p>{{vm.body}}</p>
-	<uib-progressbar value="vm.options.progress" animate="true" ng-show="vm.options.progress || vm.options.progress === 0"></uib-progressbar>
-	<uib-progressbar class="progress-striped active" ng-hide="vm.options.progress && vm.options.progress !== 0"></uib-progressbar>
+	<uib-progressbar value="vm.options.progress" animate="true" ng-show="vm.hasProgress"></uib-progressbar>
+	<uib-progressbar class="progress-striped active" ng-hide="vm.hasProgress"></uib-progressbar>
 </div>
 <div class="modal-footer">
-	<button type="button" class="btn btn-default" ng-click="vm.abort()">Abort</button>
+	<button type="button" class="btn btn-default" ng-click="vm.abort()" ng-show="!vm.options.finished">Abort</button>
+	<button type="button" class="btn btn-primary" ng-click="vm.close()" ng-show="vm.options.finished && !vm.options.autoClose">Close</button>
 </div>
