--- a/src/alert.html
+++ b/src/alert.html
@@ -1,4 +1,4 @@
-<div class="modal-header">
+<div class="modal-header" ng-if="vm.title">
 	<button type="button" class="close" aria-hidden="true" ng-click="vm.close()">&times;</button>
 	<h4 class="modal-title">{{vm.title}}</h4>
 </div>
@@ -6,5 +6,5 @@
 	<p ng-bind-html="vm.body | fmHtml"></p>
 </div>
 <div class="modal-footer">
-	<button type="button" class="btn btn-default" ng-click="vm.close()">Close</button>
+	<button type="button" class="btn btn-default" ng-click="vm.close()">{{vm.closeLabel}}</button>
 </div>
