--- a/src/wait.html
+++ b/src/wait.html
@@ -1,4 +1,4 @@
-<div class="modal-header">
+<div class="modal-header" ng-if="vm.title">
 	<button type="button" class="close" aria-hidden="true" ng-click="vm.close()" ng-show="vm.options.finished && !vm.options.autoClose">&times;</button>
 	<h4 class="modal-title">{{vm.title}}</h4>
 </div>
@@ -8,6 +8,6 @@
 	<uib-progressbar class="progress-striped active" ng-hide="vm.hasProgress"></uib-progressbar>
 </div>
 <div class="modal-footer">
-	<button type="button" class="btn btn-default" ng-click="vm.abort()" ng-show="!vm.options.finished">Abort</button>
-	<button type="button" class="btn btn-primary" ng-click="vm.close()" ng-show="vm.options.finished && !vm.options.autoClose">Close</button>
+	<button type="button" class="btn btn-default" ng-click="vm.abort()" ng-show="!vm.options.finished">{{vm.abortLabel}}</button>
+	<button type="button" class="btn btn-primary" ng-click="vm.close()" ng-show="vm.options.finished && !vm.options.autoClose">{{vm.closeLabel}}</button>
 </div>
