--- a/src/error.html
+++ b/src/error.html
@@ -4,7 +4,7 @@
 </div>
 <div class="modal-body">
 	<p ng-bind-html="vm.body | fmHtml"></p>
-	<pre>{{vm.error.message}}</pre>
+	<pre ng-repeat="error in vm.errors">{{error.message}}</pre>
 </div>
 <div class="modal-footer">
 	<button type="button" class="btn btn-default" ng-click="vm.close()">{{vm.closeLabel}}</button>
